# AutoPostbot

./: .env.example  .gitignore  LICENSE  Readme.md  pyproject.toml
scripts/: generate_context.py
src/: main.py
src/app/: bootstrap.py  config.py  logging.py
src/bot/: router.py
src/bot/handlers/: gen.py  post.py  setchannel.py  start.py
src/domain/entities/: bot_settings.py  post_draft.py
src/domain/errors/: domain_error.py
src/services/gemini/: __init__.py  gemini_service.py  prompts.py
src/services/ollama/: ollama_service.py
src/storage/repositories/: post_drafts_repository.py  settings_repository.py
