[project]
name = "autopostbot"
version = "0.1.0"
description = "A Telegram bot for automating posts on social media platforms. Using Gemini API for AI generation."
authors = [{ name = "Ama" }, { name = "ArmFreelance" }]
license = { text = "AGPL-3.0" }
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "google-genai>=0.12.0",
    "httpx>=0.24.0",
    "loguru>=0.6.0",
    "tenacity>=8.0.0",
    "aiosqlite>=0.19.0",
    "orjson>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "ruff>=0.7.0",
    "mypy>=1.0.0",
]

[project.scripts]
autopostbot = "src.main:main"

[project.urls]
"Repository" = "https://github.com/ArmFreelancer/AutoPostbot"
"Issues" = "https://github.com/ArmFreelancer/AutoPostbot/issues"
"Releases" = "https://github.com/ArmFreelancer/AutoPostbot/releases"
"Tags" = "https://github.com/ArmFreelancer/AutoPostbot/tags"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "RUF", # ruff-specific rules
]
ignore = ["B008"] # allow FastAPI-like dependency injection if needed

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
